--- a/package.json
+++ b/package.json
@@ -3,14 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-regular-svg-icons": "^5.15.3",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
+    "@fortawesome/react-fontawesome": "^0.1.14",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "express-fileupload": "^1.2.1",
+    "firebase": "^8.5.0",
     "react": "^17.0.2",
     "react-card-carousel": "^1.1.3",
     "react-dom": "^17.0.2",
     "react-elastic-carousel": "^0.11.5",
-    "react-hook-form": "^7.3.3",
+    "react-hook-form": "^7.3.6",
     "react-multi-carousel": "^2.6.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
